--- a/TASVideos/Pages/Games/PublicationHistory.cshtml
+++ b/TASVideos/Pages/Games/PublicationHistory.cshtml
@@ -2,6 +2,8 @@
 @model TASVideos.Pages.Games.PublicationHistoryModel
 @{
 	ViewData["Title"] = $"Publication History of {Model.Game.DisplayName}";
+	ViewData["Highlight"] = Model.Highlight;
+	ViewData["HighlightClass"] = "font-weight-bold font-italic border border-info p-1";
 }
 @section PageTitle {
 	<h1>@ViewData["Title"]</h1>
@@ -9,13 +11,15 @@
 
 @foreach (var node in Model.History.Branches.OrderBy(b => string.IsNullOrWhiteSpace(b.Branch)))
 {
+	var highlight = node.Id == Model.Highlight ? ViewData["HighlightClass"] : "";
+
 	<label>Current: <strong>@node.Branch:</strong></label><br />
-	<pub-link id="@node.Id">@node.Title</pub-link>
+	<pub-link class="@highlight" id="@node.Id">@node.Title</pub-link>
 	@foreach (var obsoletion in node.Obsoletes)
 	{
 		<ul>
 			<li style="text-decoration: line-through">
-				<partial name="_HistoryEntry" model="obsoletion" />
+				<partial name="_HistoryEntry" model="obsoletion" view-data="ViewData" />
 			</li>
 		</ul>
 	}
