--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -75,9 +75,10 @@
 			</div>
 		}
 
+		<hr />
 		@if (Model.Comments.Any())
 		{
-			<hr />
+
 			<collapsablecontent-header body-id="collapse-content-userfile-@Model.Id">
 				<strong>Comments</strong>
 			</collapsablecontent-header>
@@ -88,9 +89,18 @@
 					<wiki-markup markup="@comment.Text"></wiki-markup>
 				}
 			</collapsablecontent-body>
+			<hr />
 		}
 		
-		<hr />
+		<div permission="CreateForumPosts">
+			<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="Comment" asp-route-returnUrl="@Context.ReturnUrl()">
+				<input type="hidden" name="fileId" value="@Model.Id "/>
+				<label class="form-control-label">Comment:</label>
+				<textarea class="form-control" name="comment"></textarea>
+				<button type="submit" class="btn btn-secondary mt-1">Post</button>
+			</form>
+			<hr />
+		</div>
 		<a asp-page="/UserFiles/Info" asp-page-handler="Download" asp-route-id="@Model.Id" class="card-link">
 			Download (@FormatSize(Model.FileSize))
 		</a>
