--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -13,9 +13,27 @@
 	}
 }
 
+@{
+	var canEdit = Model.Author == User.Identity.Name || User.Has(PermissionTo.EditUserFiles);
+}
+
 <div class="card mb-3">
 	<div class="card-header">
-		<h4>#@Model.Id - @Model.Title</h4>
+		<h4>
+			#@Model.Id - @Model.Title
+			<span condition="canEdit" class="pull-right">
+				<button class="btn btn-secondary btn-sm">Edit</button>
+				<delete-button
+					class="btn-sm",
+					warning-message="Are you sure you want to delete this file?"
+
+					asp-href="/UserFiles?handler=Delete&fileId=@Model.Id&returnUrl=@Context.ReturnUrl()"
+				>
+					<i class="fa fa-remove"></i>
+				</delete-button>
+			</span>
+		</h4>
+		
 	</div>
 
 	<div class="card-body">
