--- a/TASVideos/Pages/Submissions/Submit.cshtml
+++ b/TASVideos/Pages/Submissions/Submit.cshtml
@@ -93,7 +93,9 @@
 		<br />
 		<div id="submit-blurb" class="text-center alert-info d-none" role="alert">
 			<div>@await Component.RenderWiki("System/SubmissionWarning")</div>
-			<label class="small alert-info">By pressing "Submit" you agree to publish this content under the <a target="_blank" href="https://creativecommons.org/licenses/by/2.0/"> Creative Commons Attribution 2.0</a> license.</label>
+			<label class="small alert-info">
+				@await Component.RenderWiki("System/WikiEditNote")
+			</label>
 		</div>
 	</fullrow>
 </form>
