--- a/TASVideos/Pages/UserFiles/Upload.cshtml
+++ b/TASVideos/Pages/UserFiles/Upload.cshtml
@@ -5,9 +5,10 @@
 	ViewData["Title"] = "Upload a User file";
 }
 
-	<form method="post" enctype="multipart/form-data">
-		<fullrow class="text-center">
-			<submit-button class="btn btn-primary">Upload</submit-button>
-			<a href="/Profile/UserFiles" class="btn btn-secondary">Cancel</a>
-		</fullrow>
-	</form>
+<form method="post" enctype="multipart/form-data">
+	<fullrow class="text-center">
+		@await Component.RenderWiki("System/WikiEditNote")
+		<submit-button class="btn btn-primary">Upload</submit-button>
+		<a href="/Profile/UserFiles" class="btn btn-secondary">Cancel</a>
+	</fullrow>
+</form>
