--- a/TASVideos/Pages/UserFiles/Upload.cshtml
+++ b/TASVideos/Pages/UserFiles/Upload.cshtml
@@ -5,11 +5,7 @@
 	ViewData["Title"] = "Upload a User file";
 }
 
-Accepted formats: All submittable movie formats, .lua, .wch
-<br />
-Accepted compression: Uncompressed, .zip, .gz, .bz2, .lzma, .xz
-<br />
-
+@await Component.RenderWiki("System/UserFileUploadHeader")
 <form method="post" enctype="multipart/form-data">
 	<row>
 		<column md="8">
