UseFile info - account for system without game

--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -53,6 +53,10 @@
 					}
 				</p>
 			}
+			else if (Model.System != null)
+			{
+				<text>For @Model.System</text>
+			}
 
 			@if (Model.IsMovie)
 			{
