--- a/TASVideos/Pages/UserFiles/ForUser.cshtml
+++ b/TASVideos/Pages/UserFiles/ForUser.cshtml
@@ -5,11 +5,8 @@
 	ViewData["Title"] = "User Files for " + Model.UserName;
 }
 
-<fullrow class="mt-2 mb-2">
-	<div class="pull-right">
-		<a asp-page="Index" class="btn btn-secondary">All User Files</a>
-	</div>
-</fullrow>
+<a asp-page="Index" class="btn btn-secondary btn-sm mb-2">All User Files</a>
+<partial name="_Pager" model="Model.Files" />
 
 @* ReSharper disable once UnusedVariable *@
 @foreach (var file in Model.Files.OrderByDescending(f => f.UploadTimestamp))
