--- a/TASVideos/Pages/UserFiles/ForUser.cshtml
+++ b/TASVideos/Pages/UserFiles/ForUser.cshtml
@@ -6,6 +6,7 @@
 }
 
 <a asp-page="Index" class="btn btn-secondary btn-sm mb-2">All User Files</a>
+<a asp-page="/UserFiles/Upload" class="btn btn-secondary btn-sm pull-right">Upload</a>
 <partial name="_Pager" model="Model.Files" />
 
 @* ReSharper disable once UnusedVariable *@
