--- a/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
@@ -1,16 +1,16 @@
 ﻿@model IEnumerable<TabularMovieListResultModel>
-	@{
-	string flink = ViewData["flink"]?.ToString();
-	string footer = ViewData["footer"]?.ToString();
+@{
+	string? flink = ViewData["flink"]?.ToString();
+	string? footer = ViewData["footer"]?.ToString();
 	var first = Model.FirstOrDefault();
-	}
+}
 	<hr />
 	<row>
 		<div class="col-lg-9 col-md-8">
 			<table class="table table-striped table-sm hidden-lg-down">
 				@if (!string.IsNullOrWhiteSpace(flink))
 				{
-				<caption><a href="/@flink">@footer</a></caption>
+					<caption><a href="/@flink">@footer</a></caption>
 				}
 				<tbody>
 					<tr>
