--- a/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
@@ -19,7 +19,7 @@
 	}
 }
 
-<label class="float-right">Total: @brokenLinks.Count()</label>
+<label class="float-right">Total: @brokenLinks.Count</label>
 <table class="table table-striped">
 	<tbody>
 		<tr>
@@ -38,7 +38,7 @@
 	</tbody>
 </table>
 
-<label class="float-right">Total: @missingTranslations.Count()</label>
+<label class="float-right">Total: @missingTranslations.Count</label>
 <table class="table table-striped">
 	<tbody>
 		<tr>
