--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -93,18 +93,19 @@
 					<br />
 					(Please read <a href="PublisherGuidelines.html">Publisher guidelines</a> for guidelines regarding screenshot selection.)
 				</span>
+				<span asp-validation-for="Submission.Screenshot" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="Submission.ScreenshotDescription"></label>
 				<input asp-for="Submission.ScreenshotDescription" type="text" class="form-control" />
 				<div>@Html.DescriptionFor(m => m.Submission.ScreenshotDescription)</div>
-				<span asp-validation-for="Submission.Screenshot" class="text-danger"></span>
+				<span asp-validation-for="Submission.ScreenshotDescription" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="Submission.TorrentFile" class="form-control-label"></label>
 				<input type="file" asp-for="Submission.TorrentFile" class="form-control" />
 				<div>@Html.DescriptionFor(m => m.Submission.TorrentFile)</div>
-				<span asp-validation-for="Submission.Screenshot" class="text-danger"></span>
+				<span asp-validation-for="Submission.TorrentFile" class="text-danger"></span>
 			</form-group>
 		</column>
 	</row>
