--- a/TASVideos/Pages/Wiki/PageHistory.cshtml
+++ b/TASVideos/Pages/Wiki/PageHistory.cshtml
@@ -142,7 +142,7 @@
 			opcodes: opcodes,
 			baseTextName: "r" + fromRevision,
 			newTextName: "r" + toRevision,
-			contextSize: null,
+			contextSize: 5,
 			viewType: viewType
 		}));
 	}
