--- a/TASVideos/Pages/Wiki/EditHistory.cshtml
+++ b/TASVideos/Pages/Wiki/EditHistory.cshtml
@@ -89,7 +89,7 @@
 			opcodes: opcodes,
 			baseTextName: "r" + fromRevision,
 			newTextName: "r" + toRevision,
-			contextSize: null,
+			contextSize: 5,
 			viewType: viewType
 		}));
 	}
