--- a/TASVideos/Pages/Submissions/Edit.cshtml
+++ b/TASVideos/Pages/Submissions/Edit.cshtml
@@ -4,8 +4,10 @@
 @{
 	ViewData["Title"] = $"Edit Submission #{Model.Id}";
 }
-@Html.ValidationSummary()
-<div asp-validation-summary="ModelOnly" class="alert alert-danger alert-dismissible" role="alert"></div>
+<div class="text-danger">
+	@Html.ValidationSummary()
+</div>
+
 <form method="post" enctype="multipart/form-data">
 	<input condition="@Model.AvailableStatuses.Count() <= 1" type="hidden" asp-for="Submission.Status" />
 	<row condition="@Model.AvailableStatuses.Count() > 1">
