--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -54,6 +54,9 @@
 				</small>
 			</h4>
 			<h4 condition="Model.IsPublished" class="alert-heading">Status: <a asp-page="/Publications/View" asp-route-id="@Model.PublicationId">@Model.Submission.Status.EnumDisplayName()</a></h4>
+			<div condition="Model.Submission.HoursRemainingForJudging() > 0">
+				(Available for judging in @Model.Submission.HoursRemainingForJudging() hours)
+			</div>
 			<span condition="@(!string.IsNullOrWhiteSpace(Model.Submission.Judge))">
 				<label asp-for="Submission.Judge"></label>:
 				<profile-link username="@Model.Submission.Judge">@Model.Submission.Judge</profile-link>
