--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using TASVideos.Pages.Submissions.Models
 @model IndexModel
 @{
 	ViewData["Title"] = "Submissions";
@@ -18,7 +19,7 @@
 @await Component.RenderWiki("System/SubmissionHeader")
 <hr />
 <form method="get" id="submission-form">
-	<two-column-select available-list="AvailableStatuses" id-list="Search.StatusFilter"/>
+	<two-column-select available-list="AvailableStatuses" id-list="Search.StatusFilter" />
 	<row class="mt-2 mb-2">
 		<column md="5">
 			<label asp-for="Search.Years" class="form-control-label"></label>
@@ -84,7 +85,7 @@
 <hr />
 <partial name="_Pager" model="Model.Submissions" />
 <table class="table table-striped table-bordered">
-	<sortable-table-head model-type="typeof(TASVideos.Pages.Submissions.Models.SubmissionListEntry)" sorting="Model.Search"/>
+	<sortable-table-head model-type="typeof(TASVideos.Pages.Submissions.Models.SubmissionListEntry)" sorting="Model.Search" />
 	@foreach (var item in Model.Submissions)
 	{
 		<tr>
@@ -94,7 +95,12 @@
 			<td>@($"{item.Time:g}")</td>
 			<td>@item.Author</td>
 			<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
-			<td>@item.Status.EnumDisplayName()</td>
+			<td>
+				@item.Status.EnumDisplayName()
+				<small condition="item.HoursRemainingForJudging() > 0">
+					<br />(Available for judging in @item.HoursRemainingForJudging() hours)
+				</small>
+			</td>
 		</tr>
 	}
 </table>
