--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -16,12 +16,11 @@
 	<a permission="SetTier" class="btn btn-secondary btn-sm" asp-page="EditTier" asp-route-id="@Model.Id">Edit</a>
 </fullrow>
 <hr />
-<label>Files:</label>
-<a permission="CreateAdditionalMovieFiles" asp-page="AdditionalMovies" class="btn btn-primary btn-sm mb-2 pull-right ml-2">Additional Movie Files</a>
+<a permission="CreateAdditionalMovieFiles" asp-page="AdditionalMovies" asp-route-id="@Model.Id" class="btn btn-primary btn-sm mb-2 pull-right ml-2">Additional Movie Files</a>
 <a permission="EditPublicationFiles" asp-page="EditFile" asp-route-id="@Model.Id" class="pull-right btn btn-primary btn-sm mb-2">Edit</a>
-<table class="table table-bordered">
+<table class="table table-bordered table-sm">
 	<tr>
-		<th>Name</th>
+		<th>File Name</th>
 		<th>Type</th>
 		<th>Description</th>
 	</tr>
@@ -39,6 +38,21 @@
 	}
 </table>
 <hr />
+<a permission="EditPublicationFiles" asp-page="EditUrls" asp-route-id="@Model.Id" class="pull-right btn btn-primary btn-sm mb-2">Edit</a>
+<table class="table table-bordered table-sm">
+	<tr>
+		<th>Url</th>
+		<th>Type</th>
+	</tr>
+	@foreach (var url in Model.Publication.Urls.OrderBy(f => f.Type))
+	{
+		<tr>
+			<td><a href="@url.Url">@url.Url</a></td>
+			<td>@url.Type</td>
+		</tr>
+	}
+</table>
+<hr />
 <form method="post">
 	<input type="hidden" asp-for="Publication.SystemCode" />
 	<row>
@@ -49,11 +63,6 @@
 				<span asp-validation-for="Publication.Branch" class="text-danger"></span>
 			</form-group>
 			<form-group>
-				<label asp-for="Publication.ObsoletedBy"></label>
-				<select asp-for="Publication.ObsoletedBy" asp-items="@UiDefaults.DefaultEntry.Concat(Model.AvailableMoviesForObsoletedBy)" class="form-control"></select>
-				<span asp-validation-for="Publication.ObsoletedBy" class="text-danger"></span>
-			</form-group>
-			<form-group>
 				<label asp-for="Publication.EmulatorVersion"></label>
 				<input type="text" class="form-control" asp-for="Publication.EmulatorVersion" />
 				<span asp-validation-for="Publication.EmulatorVersion" class="text-danger"></span>
@@ -61,14 +70,9 @@
 		</div>
 		<div class="col-lg-6">
 			<form-group>
-				<label asp-for="Publication.OnlineWatchingUrl"></label>
-				<input type="text" class="form-control" asp-for="Publication.OnlineWatchingUrl" />
-				<span asp-validation-for="Publication.OnlineWatchingUrl" class="text-danger"></span>
-			</form-group>
-			<form-group>
-				<label asp-for="Publication.MirrorSiteUrl"></label>
-				<input type="text" class="form-control" asp-for="Publication.MirrorSiteUrl" />
-				<span asp-validation-for="Publication.MirrorSiteUrl" class="text-danger"></span>
+				<label asp-for="Publication.ObsoletedBy"></label>
+				<select asp-for="Publication.ObsoletedBy" asp-items="@UiDefaults.DefaultEntry.Concat(Model.AvailableMoviesForObsoletedBy)" class="form-control"></select>
+				<span asp-validation-for="Publication.ObsoletedBy" class="text-danger"></span>
 			</form-group>
 		</div>
 	</row>
