external media publishing for updating publication screenshots

--- a/TASVideos/Pages/Publications/EditFile.cshtml
+++ b/TASVideos/Pages/Publications/EditFile.cshtml
@@ -5,6 +5,7 @@
 }
 
 <form method="post" enctype="multipart/form-data">
+	<input type="hidden" asp-for="Title" />
 	<row>
 		<column md="6">
 			<card>
