add external media posting about adding adding/removing additional movie files

--- a/TASVideos/Pages/Publications/AdditionalMovies.cshtml
+++ b/TASVideos/Pages/Publications/AdditionalMovies.cshtml
@@ -33,6 +33,7 @@
 </row>
 <hr />
 <form method="post" enctype="multipart/form-data">
+	<input type="hidden" asp-for="PublicationTitle" />
 	<row>
 		<column lg="6">
 			<form-group>
