misc cleanups in publication uis

--- a/TASVideos/Pages/Publications/AdditionalMovies.cshtml
+++ b/TASVideos/Pages/Publications/AdditionalMovies.cshtml
@@ -51,8 +51,8 @@
 				<span asp-validation-for="AdditionalMovieFile" class="text-danger"></span>
 			</form-group>
 			<div class="text-center mt-3">
-				<button type="submit" class="btn btn-primary">Update</button>
-				<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Movie</a>
+				<button type="submit" class="btn btn-primary">Add</button>
+				<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Edit</a>
 			</div>
 		</column>
 	</row>
