--- a/TASVideos/Pages/Publications/EditTier.cshtml
+++ b/TASVideos/Pages/Publications/EditTier.cshtml
@@ -17,7 +17,7 @@
 	</row>
 	<div class="text-center mt-3">
 		<button type="submit" class="btn btn-primary">Update</button>
-		<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back to Edit</a>
+		<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Edit</a>
 	</div>
 </form>
 
