--- a/TASVideos/Pages/Publications/EditFile.cshtml
+++ b/TASVideos/Pages/Publications/EditFile.cshtml
@@ -29,7 +29,7 @@
 	<hr/>
 	<div class="text-center mt-3">
 		<button type="submit" class="btn btn-primary">Update</button>
-		<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+		<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Edit</a>
 	</div>
 </form>
 
