Publication edit - ability to add/remove torrents, Publication form - use the provided torrent filename instead of movie id

--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -17,7 +17,7 @@
 </fullrow>
 <hr />
 <a permission="CreateAdditionalMovieFiles" asp-page="AdditionalMovies" asp-route-id="@Model.Id" class="btn btn-primary btn-sm mb-2 pull-right ml-2">Additional Movie Files</a>
-<a permission="EditPublicationFiles" asp-page="EditFile" asp-route-id="@Model.Id" class="pull-right btn btn-primary btn-sm mb-2">Edit</a>
+<a permission="EditPublicationFiles" asp-page="EditFiles" asp-route-id="@Model.Id" class="pull-right btn btn-primary btn-sm mb-2">Edit</a>
 <table class="table table-bordered table-sm">
 	<tr>
 		<th>File Name</th>
