--- a/TASVideos/Pages/Publications/EditFiles.cshtml
+++ b/TASVideos/Pages/Publications/EditFiles.cshtml
@@ -44,7 +44,7 @@
 				<select asp-for="Type" asp-items="Model.AvailableTypes" class="form-control"></select>
 				<span asp-validation-for="Type" class="text-danger"></span>
 			</form-group>
-			<form-group>
+			<form-group id="description-group">
 				<label asp-for="Description"></label>
 				<input type="text" asp-for="Description" class="form-control" />
 				<span asp-validation-for="Description" class="text-danger"></span>
@@ -56,6 +56,19 @@
 		</column>
 	</row>
 </form>
+<script>
+	(function () {
+		var typeModel = document.getElementById('@nameof(Model.Type)');
+		var descriptionForm = document.getElementById('description-group');
+		typeModel.onchange = function () {
+			if (this.value == 0) {
+				descriptionForm.classList.remove('d-none')
+			} else {
+				descriptionForm.classList.add('d-none')
+			}
+		};
+	})()
+</script>
 
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
